修改了首页的布局

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="cache-control" content="no-cache" />
-    <title>document-demo</title>
+    <title>网抑郁云音乐</title>
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
